update - separacao de folder de produtos - adicao imagem modelo um na tela HOme e logo na APPBAR

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,13 @@ dev_dependencies:
 
 
 
+
+
 flutter:
 
     uses-material-design: true
+
+    assets:
+      - assets/logo/logo_pourNous.png
+      - assets/images/modelo_um.jpg
 
