--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -32,4 +33,12 @@ flutter:
     assets:
       - assets/logo/logo_pourNous.png
       - assets/images/modelo_um.jpg
+      - assets/images/mango_front.jpeg
+      - assets/images/mango_back.jpeg
+      - assets/images/lichia_front.jpeg
+      - assets/images/lichia_back.jpeg
+      - assets/images/green_mango_front.jpeg
+      - assets/images/green_mango_back.jpeg
+      - assets/images/modelo_dois.jpeg
+      - assets/images/modelo_tres.jpeg
 
